feat: upgrade about component, add aboutBox

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -35,7 +35,7 @@
     row-gap: 1.25rem;
 }
 
-.skills__title {
+.skills__titles {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
@@ -58,4 +58,43 @@
 
 .skills__bar {
     background-color: #f1f1f1;
+}
+
+.skills__percentage {
+    display: block;
+}
+
+.development {
+    width: 90%;
+    background-color: rgb(255, 209, 92);
+}
+
+.analysis {
+    width: 90%;
+    background-color: rgb(255, 76, 96);
+}
+
+.salesforce {
+    width: 90%;
+    background-color: rgb(108, 108, 299);
+}
+
+.about__boxes {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1.875rem;
+    margin-top: 4.35rem;
+}
+
+.about__box {
+    display: flex;
+    column-gap: 1.5rem;
+}
+
+.about__icon {
+    font-size: var(--h1-font-size);
+    color: #dedeea;
+}
+
+.about__title {
+    font-size: 1.875rem;
 }
